Improve distances display in PDF