@@ -225,7 +225,7 @@ public class SearchControllerIT extends AbstractControllerIT {
 
         SearchFamilyResultDto searchFamilyResult = objectMapper.readValue(searchResult, SearchFamilyResultDto.class);
 
-        UUID personUuid = searchFamilyResult.getPeople().get(0).getUuid();
+        UUID personUuid = searchFamilyResult.getPeople().getFirst().getUuid();
 
         /*
          * Test download plain family tree PDF
